--- a/issue7/article03/2022-02-23.mdx
+++ b/issue7/article03/2022-02-23.mdx
@@ -1,21 +1,20 @@
 ---
-title: "An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria"
+title: 'An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria'
 slug: the-role-of-music-in-coping-with-bereavement-in-esan
-description: ""
+description: 'The people have a stupendous collection of songs and proverbs themed around death is indicative of the fact that death itself is a well thought of phenomenon in their cosmology. To elicit data for this study, a mixture of research methods was used and these included library search for relevant literature, interviews and active spectatorship and observation.'
 authors: [caluede]
-tags: []
+tags: [Bereavement, Therapy, Death, indigenous, Thanatology, Esan]
 ---
-
 
 # An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria
 
 {/* truncate */}
 
 ```
-UDC: 784.68:393.7(669.1) 
-     78:316.7 
+UDC: 784.68:393.7(669.1)
+     78:316.7
 
-COBISS.SR-ID 59576585 CIP - 5 
+COBISS.SR-ID 59576585 CIP - 5
 _________________
 Received: Jan 13, 2022
 Reviewed: Jan 28, 2022
@@ -45,42 +44,385 @@ export function Name({ author, affil, email }) {
 
 <div className='abstract'>
 <div className='citation'>
-<strong>Citation:</strong> Aluede, Charles O. and Olatubosun S. Adekogbe. 2022. "Anatomy of Ethos, Pathos in Music of Africa and its Pathogenic Essence." [_Accelerando: Belgrade Journal of Music and Dance 7:1_](http://localhost:3000/articles/issue8/art)
+<strong>Citation:</strong>  Aluede, Charles 0. 2022. "An Excursion into the Role of Music in Coping with Bereavement in Esan, Edo State Of Nigeria." [_Accelerando: Belgrade Journal of Music and Dance 7:3_](http://localhost:3000/articles/issue8/art)
 
 </div>
 
 <div>
 	<h4>Abstract</h4>
 	<div>
-		There is the need to re-examine what was previously held as age-old truths
-		in the light of new findings; the issue of music and its use in our
-		contemporary societies is one of such. For example, there was a general
-		assumption that music making has no side effects and that everyone enjoys
-		music. Today, musicogenic epilepsy stares at our faces and we have come to
-		know that such beliefs are not truly so. Without contradiction, music
-		features in major activities in our daily living. The avenues for music
-		making in traditional societies are gradually being taken over by the
-		churches, club houses, social and cultural organisations with high wattage
-		of volumes. This development has some negative effects on human and
-		environmental health. This study uses a descriptive research method which
-		entails quantitative and qualitative designs. Data were elicited through
-		participant observation, interviews, review of apt literature and
-		questionnaires. A4D Tuner, a tool for measuring sound pressure levels was
-		used to assess the volume of sounds often emitted in certain social and
-		other gatherings. It was observed that most of the musical avenues visited
-		emit sounds which are far above the recommended 75dB as stipulated by the
-		World Health Organisation (WHO). The work predicts that bathing people or
-		the environment with excessively high volume of sounds will in no time
-		engender physical and emotional disturbances, neural deafness and even total
-		deafness. Consequently, it suggests that the government should make adequate
-		legislation on sound pollution to arrest this malaise.
+		There is a plethora of proverbs and songs in Esan traditional society which
+		are connected with issues related to death and dying. Some of such apt
+		proverbs are that: death knows no king, death does not know a scanty village
+		to spare, one cannot be sick to the extent of not being able to die, death
+		is no respecter of anybody, death is no problem but it is sickness which is
+		the great destroyer, everything done early in life is good except death,
+		death spoils all things; when death comes, one cannot say one is not ready
+		or death cannot be lobbied to spare one for a while to mention but a few.
+		These opinions held by the people are not only spoken but crafted into
+		songs. That the people have a stupendous collection of songs and proverbs
+		themed around death is indicative of the fact that death itself is a -well
+		–thought- of phenomenon in their cosmology. To elicit data for this study, a
+		mixture of research methods was used and these included library search for
+		relevant literature, interviews and active spectatorship and observation.
+		The study presents some notated dirges and does their textual analysis to
+		reveal the people’s construct of death and evaluate the therapeutic potency
+		of their song texts. In the course of this investigation, it was discovered
+		that because death reeks much displeasure in the forms of guilt feeling,
+		emptiness, insecurity, and sadness, elegies are never rehearsed but are
+		performed as soon as a kinsperson dies. Consequently, it was observed that
+		the profuse performance of dirges among the Esan is to strengthen those left
+		behind physically, emotionally and spiritually. It is our thinking that this
+		work will be a contribution to the growing body of knowledge in Thanatology,
+		as well as studies relating to the mournful piece of music, intended to
+		accompany funeral or memorial rites, as a memorial to a dead person, in
+		contemporary discourses.
 		<div>
 			<strong>Keywords:</strong>
-			<i> anatomy, ethos, pathos, pathogens, public health, music therapy</i>
+			<i>
+				{' '}
+				Grief, Bereavement, Therapy, Death, indigenous knowledge, funeral dirge,
+				Thanatology, Esan
+			</i>
 		</div>
 	</div>
 </div>
 
 </div>
 
-<div className='text'></div>
+<div className='text'>
+
+## Introduction
+
+> one of the most beneficial gifts that humans have brought to the earth is music. In great music, the ancient longing of the earth finds a voice....Music ministers to the silence and solitude of nature; it is one of the most powerful, immediate, and intimate of sensuous experiences. Music is, perhaps the art form that brings us closest to the eternal because it changes immediately and irreversibly the way we experience time. When we are listening to a beautiful music, we enter into the eternal dimension of time. Transitory, broken linear time fades away, and we come into the circle of belonging within the eternal. (O’Donohue 1998)
+> ​
+
+​Globally when issues relating to death are mentioned, one is faced with uncertainties in discussing the matter to exactitude. The major challenge in this endeavour is perhaps based on the fact that those who have had near death experiences are not common and where a handful of such persons are found, their experiences are usually not the same. These discrepancies have often made people have doubts about such testimonies. Even in the wake of these challenges, researchers are not deterred from any further investigation of the subject matter. For example, from time to time, a new milieu of awareness evolves among researchers and professionals who are concerned about seeking ways of advancing novel thoughts and directions in their areas of specialty. Such waves of awareness are obviously not aimed at repudiating already established standards but to enhance what has been, in order to be able to relate properly with contemporary tendencies in scholarship. Viewed from whichever angle, death and dying are subjects of grave concern to Esan people. While there are so many myths, folktales and proverbs woven around death, how to strengthen the emotionally weak, moody and depressed as a result of bereavement features prominently in their folk life. In all of these, the use of music in retuning the bereaved to practical realities and the negotiation of good quality of life has constantly received quality attention when one journeys through their landscapes into their sonic spaces. As we progress in this presentation, it is important that we define the territory whose culture we intend to discuss. A question of this sort will be helpful: Who are the Esan people and where are they found?
+
+## ​The Esan
+
+​The term Esan has dual meanings. It is nomenclatural for a territory occupied by a people of a land, and is also a language spoken in that locale (Aluede 2019). Geographically, Esan is bounded by Owan East, Etsako West and Etsako Central in the North, Owan West in the Northwest, Orhionmwon in the South and river Niger by the East. The Esan occupies a landmass of about 2,814 square kilometers (Oseghale 2019). Owing to its historical origin, the social and political organization of the people relies greatly on that of Benin (Okojie 1994; Okoduwa 1997). This people are believed to have migrated from Benin Empire at different periods and the first batch of such migrations which happened in 1025 BC in the opinion of Ojiefoh (2002) actually met some inhabitants at Egbelle in Uromi. Below is a map of the area occupied by the Esan people.
+
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue7/article03/aluede_fig1.png').default}
+			alt='Figure 1. Map of Edo State Showing the study area'
+		/>
+		<figcaption>
+			**_Figure 1._** Map of Edo State Showing the study area
+		</figcaption>
+	</figure>
+</div>
+
+## Methods and Materials
+
+​In this article, we relied on ethnographic method of inquiry to elicit data and provide answers to the myriads of questions raised in this work. To be able to do so effectively, we adopted a mixture of styles to mop up information some of which are:
+
+- Literature search,
+- Interview and
+- observational technique.
+
+Esanland is grouped under five local government areas for administrative convenience. These local government areas have Ubiaja, Uromi, Irrua, Ekpoma and Igueben as administrative headquarters. Semi-structured interviews were conducted and data were elicited from fifty-five respondents out of whom thirty were elders, five were trained medical doctors (one each from the five local government areas) and the others are young and old adults. Semi-structured interviews were conducted and data were elicited and analysed accordingly.
+​
+
+## Kinds of Death in Esan Worldview
+
+​Here, we would like to start by examining briefly kinds of death from Esan lens. Among this people, death is not just taken in as its name implies. The variables responsible for death are often given a due consideration too. This consideration has a link with the expected funeral observances. Aluede and Aluede (2012) have interrogated this subject matter a great deal and we would like to cite them here elaborately. To them, death could be shameful or glorious. To die of poverty, hunger, neglect or to be discovered dead as a result of foul odour perceived from a decomposing body obviously are no news of good tidings. Similarly, to die through self-help (suicide) or going against community mores as in dying in the bush and dying of mental disorder in the community are also strands of shameful deaths. While in Esan vocabulary Uumhin-oya implies shameful death, Uumhin-eghonghon means joyous or glorious death. Dying peacefully in a sleep, dying after a very brief illness and not dying of protracted and malignant ailment that could dry up available resources at an old age is regarded as joyous or glorious death. Aluede and Aluede (2011) are not alone in this thinking. It is in this connection that Izibili (2017) opines that
+
+> Death to the traditional Esan people, is of two kinds. The first they refer to as “Good death” Good death is that which takes place when the person has attained a reasonable age and the children are grown up to give him a befitting burial. “Bad death” is such that happens when an under aged dies right in the very eyes of the parents… Another kind of “bad death” is suicide (Uhoa). (Izibili 2017, 83-84)
+
+Uhoa is different from Uhohoa. Uhohoa is to go with the wind and wonder to an unknown destination. In Esan, death is subject to scrutiny and it is this scrutiny that determines the kind of interment that the deceased gets. (Aluede 2019)
+
+## ​Death in Esan Worldview
+
+​In Esan belief and perhaps in many other Nigerian ethnic groups, death remains a major puzzle to all mortals. There are three major miseries relating to death; they are how, where and when one will die.... Even when someone dies as an octogenarian or nonagenarian, death is still seen as a sudden development (Aluede and Aluede 2011, 12). There are proverbs in Esan which attest to the fact that death as the ultimate terminator of humans is of concern to all irrespective of their political, religious or economic status. Some of them are: Sade ai len emhiamhen no da gbo okhomhon, a re toto ruen (If it were possible to know the ailment that will kill a patient, one would have responded swiftly), death knows no king, death does not know a scanty village to spare, one cannot be sick to the extent of not being able to die, death is no respecter of anybody, death is no problem but it is sickness who is the great destroyer, everything done early in life is good except death, death spoils all things; when death comes, one cannot say one is not ready or death cannot be lobbied to spare one for a while to mention but a few. It is this thought process that has made Esan people to put mechanisms in place in arresting and coping with the tension, shock and grief associated with bereavement.
+
+## ​Coping Strategies as a result of Bereavement in Esan
+
+​The realisation that death has taken away one’s beloved is of grave botheration. This realisation threatens both young and old in similar and different ways. For example, while talking of kids and death, Lathom-Radocy (2002) observed that:
+
+> It is normal for a child to feel sad and upset after a death in the family, the loss of a favourite pet, or a loss of a friend. Symptoms similar to depression may occur: Irritability, poor concentration, changes in sleeping and eating habits, and social withdrawal. The child may also experience separation anxiety, especially if a parent has died and there is fear of other caregivers not being available for him or her. (Lathom-Radocy 2002, 74)
+
+​
+​From the Esan indigenous knowledge it is an already known fact that when death has occurred in the neighbourhood, mutuality is threatened. Myriads of thoughts and questions often plague the mind of the bereaved. Musical intervention is required to stabilise the bereaved. To them, music may heal singularly or with some forms of psychotherapy, rituals and prayers. A major example of such circumstance is during bereavement. On such occasions, music is primarily used in dealing with emotion borne cases like grief, sadness, anger, anxiety and bereavement. Bereavement resulting from loss of a dear person is usually the precursor of grief and sadness (Aluede 2010). Williams (1995) talked specifically of bereavement related illness when he opined that:
+
+> When we lose a loved one through death, we may normally and naturally deny our deep loss for a time. Yet if this denial continues and we suppress the reality of this death, we may become ill and need help. (Williams 1995, 10)
+
+Death of a beloved one is often greeted with much denial in the forms of soliloquy or spoken words like: “It is not possible”; “I do not believe it” or “I won’t believe it”. And at some points, it graduates to “Why me?”, “Am I the only one in this community?”, “Could this be happening to me again?”, or “Lord, where are you?” These thoughts are not only mind perturbing but pathogenic. To arrest such thoughts within the minds of the bereaved in Esanland, a circle of uninterrupted music making in the home of the departed is normally instituted as soon as death occurs.
+
+For an uninformed spectator at the traditional funeral of an Esan person, the observances in the forms of rites, chants and musical performances are enough to conclude that too many human and material resources are wasted in the exercise. However, taking a second look at the essence of such activities, one would pause to learn from the indigenous knowledge systems of the people in enhancing contemporary lifestyles. There is a philosophical basis for the five days circle of every evening rendition of dirges among these people. This principle is contingent on their theory of Ene ka mie emin bhe ‘gbe, ei jie ne kike mien da hoa (Those who first experienced calamity do not allow those experiencing it lately to commit suicide). This formula is akin to Kapanga which is a music healing tradition in Western Kenya – an institutionalized music which is usually performed for women at the point of delivery. These women in labour are treated to a performance of special music by fruitful women in the community to help them reduce the traumatic experience associated with childbirth. Music is made to midwife women in labour to safe delivery (Mulindi-King 1990).
+
+In most Esan communities, funerals often start with Ujie performances. Ujie has an exclusive place in the rites of passage of the dead in Esan. Aluede and Aluede (2011) observe that during the Ujie performance, the children, siblings and friends of the departed are able to hi in respect of the dead. To hi for the dead is to say some chants, recitatives or even songs in praise and prayer for the deceased. Where the challenges that befell the dead are known to some family members, the chanter prays against all of them in the dead person’s next earthly life.
+
+Iganede or Ilede in Esan means ‘wake keep’. In times of bereavement, as soon as the departed is buried in the late afternoon, family members and friends gather in the deceased’s home with simple musical instruments such as the bell, gourd rattle, samba, thumb piano, etc., to keep the night with immediate family of the departed. Prescribed dirges are performed for a circle of five days starting from every evening to midnight. The five days start counting from the day of interment. In this area, they actually consider a week from the traditional ritual calendar of five market days which is _Uhen_ and _Usumun_ as two circles of market days - and a month is considered from the perspective of lunar months. Although today these traditional styles of calculations have given ways to modern seven days in a week and thirty or thirty-one days of the month, in traditional observances, the five days ritual calendar is sacrosanct. Below is an explanatory diagram. These five days have their own names depending on the respective Esan towns. The first day as marked in the diagram is the most preferred day of burial. The second day which is Edeze or Edewor is considered traditional Sabbath and interments are to be done that day. Once interment has been done, Iganede or Ilede starts.
+
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue7/article03/aluede_fig2.png').default}
+			alt='Figure 2. A model designed by the Author showing a five-day mourning process'
+		/>
+		<figcaption>
+			**_Figure 2._** A model designed by the Author showing a five-day mourning
+			process
+		</figcaption>
+	</figure>
+</div>
+
+## Esan dirges
+
+_​Ab initio_, indigenous knowledge has taught Esan people the value of music making in bereavement. To them, it is calmative, distractive, and soporific and it resides in every aspect of the lives of the people, hence it aids convalescence and brings about desirable changes in undesirable situations. This view is well attested to when Tousley avers that:
+
+> When we are struggling with grief, music can lift us up, take us out of our current mood, and transport us into another time and place. When we cannot find the words, a particular song may express our thoughts and feelings even better than we are able to do. Whether with lyrics or without music can be used as an escape or respite from our pain, or as a form of relaxation or meditation while we confront our sorrow. Music helps us to remember the one who died, and it can help to bring a sense of balance, peace and harmony into our lives, even if only for a moment (Tousley 2019,1)
+
+Put simply, a dirge is a mournful poem or piece of music composed or performed as a memorial to a dead person (British English electronic dictionary). The performance of dirges in this province goes beyond a memorial for the dead. Aside from reflecting on the good character of the dead, it is usually result driven-to heal the wounds associated with the grief of loss. Given this background, beyond the overall music, the text of the songs are vital to those the music is meant for. This is perhaps why Frank Ocean notes that “When you are happy, you enjoy the music. But when you are sad, you understand the lyrics.” ([Quote by Franc Ocean](https://www.goodreads.com/quotes/862166-when-you-re-happy-you-enjoy-the-music-but-when-you-re)). So, when culturally relevant music which is meant to be enjoyed meets with apt and soothing lyrics, healing, no doubt occurs.
+
+In his work, Towards a Theoretical Foregrounding in Textual Analysis of Esan Songs, Aluede (2014, 59), propounded two theories in the analysis of Esan song texts and there are: 1) The theory of Uni-textuality and 2) Ambi textuality. In his opinion, while uni-textuality applies to a song text which has just one direct meaning when translated, ambi-textuality refers to such song texts with conflict of ideas, attitudes and emotions at the same time. For want of space, we will transcribe four out of the six songs we will be discussing in this paper. While it is reasoned that in transcribing some of the songs, their lifespans and use in any other claim will be enhanced, the words of the various songs are given due analysis so as to elicit the people’s construct as embedded in the selected songs.
+
+### Ole ole rie
+
+<div className='poetry'>
+**Lyrics**
+
+```
+Ole ole rie
+Ole ole rie, Ughegbe
+Ai ra gbon
+abha rie e
+​
+[He has said he is going,
+He has said he is going,
+No one comes to the earth
+without departing]
+```
+
+</div>
+
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue7/article03/aluede_example1.png').default}
+			alt="Example 1.  Ole ole rie. (Author's archive)"
+		/>
+		<figcaption>**_Example 1._** Ole ole rie. (Author's archive)</figcaption>
+	</figure>
+</div>
+
+​This song above addresses the inevitability of death. It admonishes that no one comes without going back. So rather than beat ourselves so hard over guilt feeling, depression arising from the loss, we need to grow in the understanding that while today is for the one being mourned, the next day could be for any one of us.
+
+### Olenlen
+
+<div className='poetry'>
+**Lyrics**
+
+```
+E e Olenlen rio’ kun- oe
+Oriokun- o
+Olenlen rio’ kun- oe
+E e Olenlen rio’ kun- oe
+Ogene rie o
+Olenlen rio’ kun- oe
+
+[Oh oh the evening sun has gone to roost
+gone to roost
+the evening sun has gone to roost
+Oh oh the evening sun has gone to roost
+has truly gone
+the evening sun has gone to roost]
+```
+
+</div>
+
+​According to Aluede and Aluede (2011):
+
+> Olelen riokun (the evening sun has entered into the sea) in Esan, this means that the evening sun has gone to roost. The sun that shines right from 10:00AM to 4:00PM is known as Ovuolen. Olenlen shines from around 4:00PM to 5:30 PM; it is sometimes yellowish and at times gold-like in colour when it is waning. Olenlen as used in this context depicts an old person, hence entering into Okun means dying or joining the ancestors. (Aluede and Aluede 2011, 11).
+> ​
+
+​It might interest us to know that riverside dwellers often have the belief that the evening sun eclipses in the river and this is the same with the sea. That the elderly have died and not a youngster calls for joy. Should the reverse be the case, the elderly are often looked upon with suspicion. In this culture, it is expected that the elderly person’s children, grand and great grand children that should lead them home and when it happens this way, the funeral is usually full of pomp and pageantry.
+
+### A i mi uu gui na
+
+<div className='poetry'>
+**Lyrics**
+
+```
+A i mi uu gui na
+A i mi uu gui na
+A i mi uu gui na
+Me re gui ni ne meo
+A i mi uu gui na
+Me re gui no ‘khuo meo
+Uu ha so ‘ria ‘gbe
+Ji men vae oi ye ri bho
+E mon uu ka ka gbe,
+O ka ka gbe e mon uuo
+E gbe na monlon a re yo
+Ahi mon me gbe re yo
+
+[One cannot find death to pacify
+One cannot find death to pacify
+One cannot find death to pacify
+I would have pacified for my mother
+One cannot find death to pacify
+I would have pacified for my wife
+When death comes
+here is no excuses
+matters relating to death are too critical
+too critical are its matter
+It is with one’s body that one goes
+No one borrows another body to go]
+```
+
+</div>
+
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue7/article03/aluede_example2.png').default}
+			alt="Example 2. A i mi uu gui na. (Author's archive)"
+		/>
+		<figcaption>
+			**_Example 2._** A i mi uu gui na. (Author's archive)
+		</figcaption>
+	</figure>
+</div>
+
+This is an age old song which was also made popular by Christy Ogbah a notable Esan minstrel from Ugboha in Edo State of Nigeria in the early seventies. It is a dirge which captures the complexion of death. In the song, we get to be properly informed once again that: If it was possible to find death to pacify, I would have pacified it for my mother, If it was possible to find death to pacify, I would have pacified it for my wife, when death comes, there are no excuses, matters relating to death are too critical, too critical are its matter. It is with one’s body that one goes. No one borrows another body to go.
+
+### The Okhuerie
+
+For the sake of space and the length of this paper, not all the songs will be transcribed. Some of them will simply be textual translation. The Okhuerie song below reads:
+
+<div className='poetry'>
+**Lyrics**
+
+```
+Okhue rie
+Obha dan men
+Uwe miu’ kpo ‘dodo
+No’khue murio’ wa
+Okhue rie
+Obha dan men
+Uwe miu’ kpo ‘dodo
+No’khue murio’ wa
+
+[The parrot has flown away
+I am not pained
+Did you see the beautiful cloth
+The parrot has gone with?
+The parrot has flown away
+I am not pained
+Did you see the beautiful cloth
+The parrot has gone with?]
+```
+
+</div>
+
+Without any in-depth appreciation, this song could be taken for an ode to the parrot. The song talks of the parrot flying away and carrying away its beautiful feathers. African parrots have grey colour around their bodies and very bright red coloured tail-this is referred here as beautiful cloth. This is why Aluede (2014) admonishes that such a song should be analysed using the principle of ambi-textuality. When in a burial context such a song is sung, it is obviously not an ode to the parrot but as a memorial to a dead personage who had a great deal of good attributes worthy of emulation.
+
+### Ole ghe ole rie o
+
+<div className='poetry'>
+**Lyrics**
+
+```
+Ole ghe ole rie o
+O limen bhe gbe
+Abha ye miuu gui na
+O limen bhe gbe
+
+[He has said  that he is going
+This has given me goose pimples
+We cannot find death to appease
+This has given me goose pimples]
+```
+
+</div>
+
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue7/article03/aluede_example3.png').default}
+			alt="Example 3. Ole ghe ole rie o. (Author's archive)"
+		/>
+		<figcaption>
+			**_Example 3._** Ole ghe ole rie o. (Author's archive)
+		</figcaption>
+	</figure>
+</div>
+
+The dead have said they are gone, it is really painful but death can never be appeased.
+
+### Ede ha Gba
+
+<div className='poetry'>
+**Lyrics**
+
+```
+Ede ha gba a rio ‘wa
+Do ene mo ose
+Do ene mo ose
+
+[At the apportioned time, one goes home
+Welcome beautiful one
+Welcome beautiful one]
+```
+
+</div>
+
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue7/article03/aluede_example4.png').default}
+			alt="Example 4. Ede ha Gba (Author's archive)"
+		/>
+		<figcaption>**_Example 4._** Ede ha Gba (Author's archive)</figcaption>
+	</figure>
+</div>
+
+The song means, at the appropriate time earmarked by God one dies, oh beautiful one. Whether beautiful, ugly, rich or poor, hear oh thou: Death is real and will always come at God's appointed time. This song is performed amidst interjections of words of advice which are often spoken verbally as interlude before the song is sung again and again or as interlude within the song verses. Sometimes they start by admonishing that
+
+> it may not be out of place to find twins who came into the world the same day not dying the same day. But remember that every mortal is configured uniquely and differently. With one hand a person may throw two stones simultaneously but they will never fall into the same place.
+
+In the same vein, Ruzvidzo (1997) says music fulfils a medicinal function when through total involvement, the dance reaches its climax and patients find cure. We need to first appreciate the fact that in most traditional African contexts, music and dance are concomitant. Therefore when dance reaches climax to engender healing, music is involved. In Esan traditional society, many variables aggregate to bring about the expected healing and some of them are: The rhythm of the music, the drumming and hand clapping, the soothing texts of the dirges, the collective involvement of all the members taking part in the performance and the spectators there present who have also passed through life’s trials and are there to share their experiences to aid quick recovery.
+
+These observable influences of music on human beings have ab initio been highlighted by Mereni (1997, 2004) when he identified five different kinds of music therapy. To him, psycholytic music therapy is that kind of music provided for a client for the sake of spirit-freeing and liberating the mind from the grip of evil spirits, the anxiolytic type frees the client from the grip of anxiety. His observation is of much relevance to this paper is that while grieving, the griever becomes disturbed emotionally and then becomes unable to have good sleep as well as being unnecessarily anxious. Quite interesting and insightful is the fact that even in their primordial thinking, Esan people were able to identify the relationship between music and wellness. Thus in song bathing the bereaved for about three hours a day for five days in an uninterrupted sequence, the bereaved is freed from the firm grip of grief and are encouraged to boldly face the realities of life once again.
+
+---
+
+## Conclusion
+
+In this seminal work, the author, first of all gave a historical and geographical background of the people whose musical culture was discussed. In an effort to properly discuss dirges and their nature, it was considered fit to examine the people’s opinion of death and kinds of death. Having laid this foundation, coping strategies in times of bereavement, the role of music, the texts of their dirges were subjected to some degree of scrutiny. While in the five days of uninterrupted music bathing we found fellow feeling and music to be soothing there by aiding recovery from the shock and pains associated with grief feeling, in the dirges, we found that their texts have ways of counseling and rehabilitating the grieving community members. It is the thinking of this Author that since music has this therapeutic potency, looking into the culture to extract, enhance and positively these indigenous practices for the betterment of humankind is advocated here. In doing these, no doubt, many more years of longevity will be added to our collective lifespan since life without music is unthinkable in the African parlance, it behooves on us to deploy it into good use.
+
+---
+
+## References
+
+<div className='references'>
+
+1. Aluede, C.O. 2010. _Music as Therapy by Iyayi Society of Edo State, Nigeria._ Berlin Germany: Verlag Dr. Muller Publishers.
+2. Aluede, C.O. & Aluede, E.O. 2011. “An analytical Survey of the Ujie Music and Dance.” _MAJAC: Makurdi Journal of Arts and Culture Vol.9: 1-22._
+3. Aluede, E.O & Aluede, C.O. 2012. _The Ujie Music and Dance of the Esan, Edo State, Nigeria._ Berlin, Germany: Lambert Publishers.
+4. Aluede, C.O. 2014. “Towards A Theoretical Foregrounding in Textual Analysis of Esan Songs.” _NMR Nigerian Music Review (13 & 14): 51-63._
+5. Aluede, C.O. 2019. “Second Burial in Esan Weltanschauung Edo State of Nigeria: A Retrospective and Prospective Interrogation.” Presented at a Seminar organized by the Catholic Diocese of Uromi, Edo State on the 14th of August, 2019.
+6. Izibili, M. A. 2017. _Ugboha Native Laws and Customs and The Challenges of the 21st Century._ Benin: Optima Quality Prints.
+7. Lathom-Radocy, W. B. 2002. _Pediatric Music Therapy._ Springfield, Illinois: Charles C Thomas Publisher LTD.
+8. Mereni, A. V. 1996. “Kinesis and Katharsis 1.” _British Journal of Music Therapy 10 (1): 17-23._
+9. Mereni, A. V. 2004. _Music Therapy in Medical History._ Lagos: Apex Publishers
+10. Mulindi-King, L.C. 1990. “Music Therapy”. Lecture Presentation. Kenyatta University, Nairobi Kenya.
+11. O’Donohue, J. 1998. _Anam Cara: Spiritual Wisdom from the Celtic World._ London: Harper Perennial.
+12. Ojiefoh, A. P. 2002. Uromi Chronicles 1025- 2002. Uromi: Aregbeyeguale publishers.
+13. Okojie, C. G. 1994. _Esan Native Laws and Customs._ Benin City: IIupeju Press.
+14. Okoduwa, A. 1997. “A Geography of Esan Archaeology and Origin.” In _Studies in Esan History and Culture, edited by A. Okoduwa_. Benin: Omon Uwessan Publishers.
+15. Oseghale, B. E. 2019. “Stereotypes in History.” 81st Inaugural Lecture delivered at the Ambrose Alli University on the 25th of July, 2019.
+16. Ruzvidzo, R. 1997. “Music Therapy in Zimbabwe Facing the Future” Conference Paper presented at the International Centre for African Music and Dance, University of Ghana.
+17. Tousley, M. 2019. _Grief Healing: Useful Information on Care giving, Grief and Transition for anyone Coping with Loss._ [griefhealingblog](https://www.griefhealingblog.com/2017/03/using-music-to-help-with-grief.html) (Retrieved 6/11/2019.)
+18. Williams, P. W. 1995. _When A Loved One Dies._ Minneapolis: Augsburg Fortress Publishers
+
+</div>
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
+</div>
+
+</div>
